--- a/source/assets/stylesheets/_components.header.scss
+++ b/source/assets/stylesheets/_components.header.scss
@@ -36,9 +36,8 @@
     bottom: 0;
     right: 0;
 
-    // background-color: rgba($site-hero-background, $site-hero-overlay);
-    background-color: $color-brand-primary;
-    background-color: #EFDB00;
+    background-color: rgba($site-hero-background, $site-hero-overlay);
+    // background-color: $color-brand-primary;
 
     content: "";
 
