--- a/source/assets/stylesheets/_components.page-day-of.scss
+++ b/source/assets/stylesheets/_components.page-day-of.scss
@@ -110,7 +110,7 @@
   &:before {
 
     background-image: $image-pattern-01;
-    background-color: $color-brand-quaternary!important;
+    background-color: $color-brand-secondary!important;
     background-size: 120px;
     background-attachment: fixed;
     background-position: 50% 0;
