--- a/source/assets/stylesheets/_components.schedule.scss
+++ b/source/assets/stylesheets/_components.schedule.scss
@@ -183,7 +183,7 @@
 
       color: $color-text-strong;
       font-weight: $bold;
-      background-color: $color-brand-quaternary!important;
+      background-color: $color-brand-secondary!important;
 
 
     }
