--- a/source/assets/stylesheets/_settings.typography.scss
+++ b/source/assets/stylesheets/_settings.typography.scss
@@ -17,7 +17,7 @@ $ms-ratio: 1.25;
 
 /* Fonts */
 $font-brand-primary:              $helvetica;
-$font-brand-secondary:            $helvetica;
+$font-brand-secondary:            'Josefin Sans', $helvetica;
 
 /* Font use case */
 $font-body:                       $font-brand-primary;
