--- a/source/assets/stylesheets/_components.navigation.scss
+++ b/source/assets/stylesheets/_components.navigation.scss
@@ -33,7 +33,7 @@
   color: $color-link;
 
   border-radius: 0;
-  background-color: rgba($color-brand-tertiary, .9);
+  background-color: rgba($color-brand-quaternary, .9);
 
   cursor: pointer;
 
@@ -43,7 +43,7 @@
   &.focus {
 
     color: $color-link-hover;
-    background-color: rgba($color-brand-tertiary, .9);
+    background-color: rgba($color-brand-quaternary, .9);
 
   }
 
@@ -182,6 +182,7 @@
   font-size: ms(0);
   font-weight: $bold;
   text-align: left;
+  text-transform: uppercase;
 
   @include breakpoint(small) {
 
@@ -199,7 +200,7 @@
 .menu-item a {
 
   display: block;
-  color: $color-link;
+  color: $color-text-strong-invert;
   padding: $unit-xs $unit-s;
 
   text-decoration: none;
@@ -210,8 +211,8 @@
   &:focus,
   &.focus {
 
-    color: $color-brand-secondary;
-    background-color: $color-link;
+    color: $color-text-strong-invert;
+    background-color: $color-brand-primary;
 
   }
 
