--- a/source/assets/stylesheets/_components.header.scss
+++ b/source/assets/stylesheets/_components.header.scss
@@ -15,6 +15,7 @@
 
   background: $site-hero-background $site-hero-path-pattern repeat 50% 50%;
   background-size: 300px 300px;
+  background-attachment: fixed;
 
   // background-repeat: no-repeat;
   // background-position: 50% 0;
