--- a/source/assets/stylesheets/_components.branding.scss
+++ b/source/assets/stylesheets/_components.branding.scss
@@ -74,7 +74,7 @@
     height: ($site-logo-height * $site-logo-proportion);
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: $unit-m;
+    margin-bottom: rem(36);
 
     background-repeat: no-repeat;
     background-position: 50% 50%;
