Widget subscribe update

--- a/source/assets/stylesheets/_components.widget-subscribe.scss
+++ b/source/assets/stylesheets/_components.widget-subscribe.scss
@@ -15,7 +15,9 @@
 
   &:before {
 
-    background-color: $color-brand-tertiary;
+    background: $color-brand-quaternary $site-hero-path-pattern repeat 50% 50%;
+    background-size: 300px 300px;
+    background-attachment: fixed;
 
   }
 
