--- a/source/assets/stylesheets/_settings.colors.scss
+++ b/source/assets/stylesheets/_settings.colors.scss
@@ -375,7 +375,7 @@ $color-button-inactive:           #eeeeee;
  * Helper colors
  */
 
-$color-text-heading-1:            $color-brand-tertiary;
+$color-text-heading-1:            $color-text-strong;
 $color-text-heading-2:            $color-text-strong;
 $color-text-heading-3:            $color-text-strong;
 $color-text-heading-4:            $color-text-strong;
