--- a/source/assets/stylesheets/_experimental.scss
+++ b/source/assets/stylesheets/_experimental.scss
@@ -1,2 +1,25 @@
 /* =Experimental
 ===================================================== */
+
+.message {
+
+  padding: $unit-m;
+  margin-bottom: $unit-default;
+
+  background-color: $color-grey-10;
+  border-radius: $border-radius-small;
+
+  p {
+
+    margin-top: $unit-m;
+    margin-bottom: 0;
+
+    &:first-child {
+
+      margin-top: 0;
+
+    }
+
+  }
+
+}
