--- a/source/assets/stylesheets/_experimental.scss
+++ b/source/assets/stylesheets/_experimental.scss
@@ -1,7 +1,7 @@
 /* =Experimental
 ===================================================== */
 
-.message {
+.highlight {
 
   padding: $unit-m;
   margin-bottom: $unit-default;
@@ -9,17 +9,17 @@
   background-color: $color-grey-10;
   border-radius: $border-radius-small;
 
-  p {
+  // p {
 
-    margin-top: $unit-m;
-    margin-bottom: 0;
+  //   margin-top: $unit-m;
+  //   margin-bottom: 0;
 
-    &:first-child {
+  //   &:first-child {
 
-      margin-top: 0;
+  //     margin-top: 0;
 
-    }
+  //   }
 
-  }
+  // }
 
 }
