--- a/source/assets/stylesheets/_settings.other.scss
+++ b/source/assets/stylesheets/_settings.other.scss
@@ -37,6 +37,10 @@ $box-shadow-small:              0 rem(1) rem(3) 0 rgba(0,0,0,.2);
 $box-shadow-medium:             0 rem(1) rem(6) 0 rgba(0,0,0,.2);
 $box-shadow-large:              0 rem(1) rem(24) 0 rgba(0,0,0,.2);
 
+/* Box shadow links */
+// $box-shadow-link:              inset 0 -1px 0 0 rgba($color-link, .25);
+// $box-shadow-link-hover:        inset 0 -2px 0 0 rgba($color-link, .75);
+
 /* Logo size */
 $site-logo-width:               360px; // Width of the image/element
 $site-logo-height:              360px; // Height of the image/element
