--- a/source/assets/stylesheets/_components.comments.scss
+++ b/source/assets/stylesheets/_components.comments.scss
@@ -155,9 +155,10 @@ article.comment-body {
 
   label {
 
-    font-size: ms(-0);
+    font-size: ms(-1);
     line-height: ms(2);
     text-transform: uppercase;
+    font-family: $font-headline;
 
   }
 
@@ -181,6 +182,9 @@ article.comment-body {
     label {
 
       font-size: ms(-1);
+      line-height: ms(2);
+      font-family: $font-body;
+      text-transform: none;
 
     }
 
