Typography and headings style update

--- a/source/assets/stylesheets/_settings.typography.scss
+++ b/source/assets/stylesheets/_settings.typography.scss
@@ -16,7 +16,7 @@ $ms-base: 1em;
 $ms-ratio: 1.25;
 
 /* Fonts */
-$font-brand-primary:              $helvetica;
+$font-brand-primary:              'Source Sans Pro', $helvetica;
 $font-brand-secondary:            'Josefin Sans', $helvetica;
 
 /* Font use case */
