Attendees listing hiding bullet

--- a/source/assets/stylesheets/_components.attendees.scss
+++ b/source/assets/stylesheets/_components.attendees.scss
@@ -155,8 +155,8 @@
       margin-left: rem(8);
       vertical-align: middle;
 
-      background: no-repeat $image-bullet-dark 100% 50%;
-      background-size: 14px;
+      // background: no-repeat $image-bullet-dark 100% 50%;
+      // background-size: 14px;
 
       opacity: .5;
 
