Add ticket widget

--- a/source/assets/stylesheets/_components.speakers.scss
+++ b/source/assets/stylesheets/_components.speakers.scss
@@ -83,10 +83,10 @@
 
     padding-left: rem(32);
 
-    background-image: $image-bullet-dark;
-    background-repeat: no-repeat;
-    background-size: 12px;
-    background-position: $unit-xs $unit-xs;
+    // background-image: $image-bullet-dark;
+    // background-repeat: no-repeat;
+    // background-size: 12px;
+    // background-position: $unit-xs $unit-xs;
 
     font-size: ms(0);
     line-height: ms(2);
