--- a/source/assets/stylesheets/_settings.other.scss
+++ b/source/assets/stylesheets/_settings.other.scss
@@ -64,6 +64,6 @@ $extra-large-value:             80em; // 1280px
 
 /* Background images */
 $image-pattern-01:              url('https://2017.europe.wordcamp.org/files/2017/01/background-pattern-01.png');
-$image-realistic-ticket:        url('https://2017.europe.wordcamp.org/files/2017/01/realistic-ticket.png');
-$image-bullet-color:            url('https://2017.europe.wordcamp.org/files/2017/01/decoration-bullet-color.png');
-$image-bullet-dark:             url('https://2017.europe.wordcamp.org/files/2017/01/decoration-bullet-dark.png');
+$image-realistic-ticket:        url('https://2018.europe.wordcamp.org/files/2017/11/futuristic-ticket.png');
+// $image-bullet-color:            url('https://2017.europe.wordcamp.org/files/2017/01/decoration-bullet-color.png');
+// $image-bullet-dark:             url('https://2017.europe.wordcamp.org/files/2017/01/decoration-bullet-dark.png');
