--- a/source/assets/stylesheets/style.scss
+++ b/source/assets/stylesheets/style.scss
@@ -113,6 +113,7 @@
 @import "components.widgets";
 @import "components.widget-subscribe";
 @import "components.widget-text-social";
+@import "components.widget-text-tickets-cta";
 
 @import "components.page-sponsors";
 @import "components.page-attendees";
