--- a/source/assets/stylesheets/_components.main.scss
+++ b/source/assets/stylesheets/_components.main.scss
@@ -72,7 +72,9 @@
 
 #content {
 
-  @include container-padding(1.5);
+  // @include container-padding(1.5);
+
+  @include responsive-spacing(1.5);
 
 }
 
