Widget background and spacing

--- a/source/assets/stylesheets/_components.widgets.scss
+++ b/source/assets/stylesheets/_components.widgets.scss
@@ -67,20 +67,25 @@
 
 .content-widgets-block {
 
-  position: relative;
-  background-color: #fff;
+  .widget {
 
-  &:before {
+    position: relative;
+    // background-color: #fff;
 
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: -1000px;
-    right: -1000px;
+    &:before {
 
-    background-color: inherit;
+      position: absolute;
+      z-index: -1;
+      top: 0;
+      bottom: 0;
+      left: -1000px;
+      right: -1000px;
 
-    content: "";
+      background-color: inherit;
+
+      content: "";
+
+    }
 
   }
 
