--- a/source/assets/stylesheets/_components.widgets.scss
+++ b/source/assets/stylesheets/_components.widgets.scss
@@ -5,7 +5,9 @@
 .widget {
 
   position: relative;
-  @include container-padding(1.5);
+  // @include container-padding(1.5);
+  @include responsive-spacing(1.5, 'padding-top');
+  @include responsive-spacing(1.5, 'padding-bottom');
   max-width: $container-max-width;
   margin-left: auto;
   margin-right: auto;
