--- a/source/assets/stylesheets/_components.widgets.scss
+++ b/source/assets/stylesheets/_components.widgets.scss
@@ -67,38 +67,40 @@
 
 }
 
-// #content-widgets {
+#content-widgets {
 
 //   @include responsive-spacing(1.5, 'margin-top', 'negative');
 //   @include responsive-spacing(1.5, 'margin-left', 'negative');
 //   @include responsive-spacing(1.5, 'margin-right', 'negative');
 //   @include responsive-spacing(1.5, 'margin-bottom', 'positive');
 
-// }
+  .widget {
+
+    position: relative;
+    // background-color: #fff;
+
+    &:before {
+
+      position: absolute;
+      z-index: -1;
+      top: 0;
+      bottom: 0;
+      left: -1000px;
+      right: -1000px;
+
+      background-color: inherit;
+
+      content: "";
+
+    }
+
+  }
+
+}
 
 // .content-widgets-block {
 
-//   .widget {
-
-//     position: relative;
-//     // background-color: #fff;
-
-//     &:before {
-
-//       position: absolute;
-//       z-index: -1;
-//       top: 0;
-//       bottom: 0;
-//       left: -1000px;
-//       right: -1000px;
-
-//       background-color: inherit;
-
-//       content: "";
-
-//     }
-
-//   }
+//
 
 // }
 
