--- a/source/assets/stylesheets/_settings.colors.scss
+++ b/source/assets/stylesheets/_settings.colors.scss
@@ -214,7 +214,7 @@
 
 /* Brand */
 
-$color-brand-primary:             green; // Blue
+$color-brand-primary:             #5566C3; // Blue
 $color-brand-secondary:           #F95758; // Red
 $color-brand-tertiary:            #EFDC39; // Yellow
 $color-brand-quaternary:          #282409; // Black
