--- a/source/assets/stylesheets/_components.header.scss
+++ b/source/assets/stylesheets/_components.header.scss
@@ -19,13 +19,13 @@
 
   background-repeat: no-repeat;
   background-position: 50% 0;
-  background-size: fixed;
+  background-size: cover;
   background-image: $site-hero-path-small;
 
   @include breakpoint(medium) {
 
     background-image: $site-hero-path-large;
-    background-position: 50% 50%;
+    background-position: 50% 100%;
     background-size: cover;
 
   }
