Hero path update

--- a/source/assets/stylesheets/_components.header.scss
+++ b/source/assets/stylesheets/_components.header.scss
@@ -31,7 +31,7 @@
 
   @media (min-width: 1800px) {
 
-    background-image: $site-hero-path-large;
+    background-image: $site-hero-path-wide;
 
   }
 
